fix figure overlapping ads

--- a/ArticleTemplates/assets/scss/garnett-layout/_article--shared.scss
+++ b/ArticleTemplates/assets/scss/garnett-layout/_article--shared.scss
@@ -31,11 +31,12 @@
             width: auto;
             clear: left;
 
-            @include mq($from: col2) {
-                width: 135%;
-            }
+            // @include mq($from: col2) {
+            //     margin-left: 0;
+            //     margin-right: 0;
+            // }
 
-            @include mq($from: col4) {
+            @include mq($from: col2) {
                 margin-left: 0;
                 margin-right: 0;
                 width: 100%;
